tests/analyzer/errors/invalid_unary.rv
fn main() {
    -true
    -null
    not -8.2
}